<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoImageView"
            android:src="@drawable/ic_launcher"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleMaterialTextView"
            android:fontFamily="@font/iransanslight"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/update_dialog_title"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/updateMaterialButton"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/laterMaterialButton"
            android:text="@string/later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
