<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/verifyActivityRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:id="@+id/securityBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_forward_black_24dp" />


        <com.google.android.material.textview.MaterialTextView
            style="@style/iransansmedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:text="@string/verify"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILcodeInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"

            android:layout_marginEnd="20dp"
            android:fontFamily="@font/iransanslight"
            android:hint="@string/code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edit_texts_background"
                android:fontFamily="@font/iransanslight"
                android:gravity="start"
                android:inputType="phone"
                android:textColor="@color/gray"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/iransanslight"
            android:text="@string/we_send_code"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"

            >

            <TextView
                android:id="@+id/send_again_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/iransanslight"
                android:text="@string/time_to_resend"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/timerText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/timerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/send_again_des"
                android:drawableLeft="@drawable/ic_timer"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@id/send_again_des"
                android:fontFamily="@font/iransanslight"
                android:textColor="@color/black"
                android:layout_marginRight="15dp"
                android:textSize="24sp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_edit_texts_background"
            android:fontFamily="@font/iransanslight"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:rippleColor="#33000000">

        </Button>
    </LinearLayout>


</RelativeLayout>