<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray_light">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize">


        <com.google.android.material.textview.MaterialTextView
            style="@style/iransansmedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:text="@string/home"
            android:textColor="@color/white" />


        <ImageView
            android:id="@+id/popup"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="6dp"
            android:src="@drawable/dots_vertical"/>


    </androidx.appcompat.widget.Toolbar>

    <ScrollView

        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_light">

            <ImageView
                android:id="@+id/coronaImageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/ic_corona"
                android:scaleType="centerInside"
                android:visibility="gone"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/coronaTestCardViewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coronaImageView"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="10dp"
                android:layout_margin="8dp"
                card_view:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/ll_corona_test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/dashboard_image_view_height"
                        android:layout_height="@dimen/dashboard_image_view_width"
                        android:padding="4dp"
                        android:src="@drawable/ic_test"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        style="@style/iransanslight"
                        android:text="@string/coronaTest"
                        android:textColor="@color/black" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/newsInfoLinearLayoutContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coronaTestCardViewContainer"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/newsCard"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    card_view:cardBackgroundColor="@color/white"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dashboard_image_view_height"
                            android:layout_height="@dimen/dashboard_image_view_width"
                            android:padding="4dp"
                            android:src="@drawable/ic_news"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            style="@style/iransanslight"
                            android:text="@string/news"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/notifications"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    card_view:cardBackgroundColor="@color/white"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dashboard_image_view_height"
                            android:layout_height="@dimen/dashboard_image_view_width"
                            android:padding="4dp"
                            android:src="@drawable/ic_notices"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            style="@style/iransanslight"
                            android:text="@string/notices"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/newsInfoLinearLayoutContainer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newsInfoLinearLayoutContainer"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/list_marakez"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    card_view:cardBackgroundColor="@color/white"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dashboard_image_view_height"
                            android:layout_height="@dimen/dashboard_image_view_width"
                            android:padding="4dp"
                            android:src="@drawable/medical"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            style="@style/iransanslight"
                            android:text="لیست مراکز درمانی"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/call"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    card_view:cardBackgroundColor="@color/white"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dashboard_image_view_height"
                            android:layout_height="@dimen/dashboard_image_view_width"
                            android:padding="4dp"
                            android:src="@drawable/book"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            style="@style/iransanslight"
                            android:text="آموزش"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/statistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_below="@+id/newsInfoLinearLayoutContainer1"
                android:layout_centerHorizontal="true"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="5dp">


                <include layout="@layout/statistics_view_header"/>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_margin="8dp"
                android:layout_below="@+id/statistics"
                android:layout_centerHorizontal="true"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/dashboard_image_view_height"
                        android:layout_height="@dimen/dashboard_image_view_width"
                        android:padding="4dp"
                        android:src="@drawable/door"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        style="@style/iransanslight"
                        android:text="@string/logout"
                        android:textColor="@color/black" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>




        </RelativeLayout>


    </ScrollView>

</RelativeLayout>
